tests/paczka1/fuzzy1/81876649.err
Error in line 3: %hQ A813 64,9
Error in line 6: eZNEKy6cY A605 79,1
Error in line 23: kxsM6OVWDB A605 80,0
Error in line 30: S587 S365 75,0
